<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/ittrangchu"
            android:icon="@mipmap/home"
            android:title="@string/trangchu" />
        <item
            android:title="@string/sanpham"
            android:id="@+id/itsanpham"
            android:icon="@mipmap/sanpham"
            />
        <item
            android:id="@+id/itnhanvien"
            android:icon="@mipmap/nhanvien"
            android:title="@string/nhanvien" />
        <item
            android:id="@+id/ithoadon"
            android:icon="@mipmap/hoadon"
            android:title="@string/hoadon" />
        <item
            android:id="@+id/itkhachhang"
            android:icon="@mipmap/nhanvien"
            android:title="@string/khachhang" />
        <item
            android:id="@+id/itdonhang"
            android:icon="@mipmap/giohang"
            android:title="@string/donhang" />
        <item
            android:id="@+id/itdanhgia"
            android:icon="@mipmap/danhgia"
            android:title="@string/danhgia" />
        <item
            android:id="@+id/itlichsu"
            android:icon="@mipmap/lichsu"
            android:title="@string/lichsu" />
    </group>

</menu>