<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".DangKy">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/KhungDangNhap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862">
    </TextView>

    <LinearLayout
        android:id="@+id/KhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641">

        <EditText
            android:id="@+id/edtTenDangNhapDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/tendangnhap"
            android:padding="10dp"
            android:textColorHint="@color/gray">

        </EditText>

        <EditText
            android:id="@+id/edtMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/matkhau"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/gray">

        </EditText>

        <EditText
            android:id="@+id/edtXacNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/xacnhan"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/gray">

        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTaiKhoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:padding="10dp"
                android:text="@string/taotaikhoan">

            </Button>

            <Button
                android:id="@+id/btnQuayLai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:padding="10dp"
                android:text="@string/quaylai">

            </Button>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="196dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>