<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/nametoolbar">

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tenCH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/tenCH"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                </TextView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:srcCompat="@mipmap/poster"
                    android:layout_marginTop="15dp">
                </ImageView>

                <TextView
                    android:id="@+id/bestseller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bestseller"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp">
                </TextView>


            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ngvTrangchu"
        android:layout_gravity="start"
        android:background="@color/yellow"
        app:headerLayout="@layout/header_navigation"
        app:menu="@menu/menu_trangchu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>